--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,11 @@
         </activity>
         <activity
             android:name=".videoplayer"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="landscape"
+            android:configChanges="orientation|keyboard"
+            >
+
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
